--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "devDependencies": {
     "react-native-scripts": "1.13.1",
     "jest-expo": "26.0.0",
-    "react-test-renderer": "16.3.0-alpha.1"
+    "react-test-renderer": "^16.3.0"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "expo": "^26.0.0",
-    "react": "16.3.0-alpha.1",
+    "react": "^16.3.0",
     "react-native": "0.54.0"
   }
 }
